# r0-c-kzg

./: README.md  README_COMPILE.md
docker/: Dockerfile
host/: Cargo.toml
host/src/: kzg_utils.rs  main.rs
methods/guest/: Cargo.toml
methods/guest/src/: kzg_trust_setup.rs  kzg_utils.rs  main.rs
